# aircraft

./: .clang-format  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LIGHT_A32NX_LeftRunway.fx  LIGHT_A32NX_StrobeDouble.fx  LIGHT_A32NX_TaxiLarge.fx  ORIG A320_Neo_LowerECAM_Fuel.html  ORIG A320_Neo_LowerECAM_Fuel.js  README.md  build-utils.js  ci.igniter.config.mjs  fbw-system.txt  igniter.config.mjs  installer.cmd  jest.config.js  jsconfig.json  layout.json  manifest-base-lock-highlight.json  manifest-base.json  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  setup-build.bat  vitest.config.mjs
CargoA320/registry/src/github.com-1ecc6299db9ec823/rustplotlib-0.0.4/: .gitignore  Cargo.toml
fbw-a32nx/src/wasm/: CMakeLists.txt  README.md  build-cmake.sh
fbw-a32nx/src/wasm/extra-backend/: CMakeLists.txt  README.md  TODO-Framework.md  build-cmake.sh
fbw-a32nx/src/wasm/extra-backend-a32nx/: CMakeLists.txt
fbw-a32nx/src/wasm/extra-backend-a32nx/src/: Gauge_Extra_Backend.cpp
fbw-a32nx/src/wasm/extra-backend/src/: Gauge_Extra_Backend.cpp  aircraft_prefix.h
fbw-a32nx/src/wasm/fadec_a320/: CMakeLists.txt  build.sh
fbw-a32nx/src/wasm/fadec_a320/src/: Arinc429.cpp  Arinc429.h  Arinc429Utils.cpp  Arinc429Utils.h  EngineControl.h  FadecGauge.cpp  FadecGauge.h  RegPolynomials.h  SimVars.h  Tables.h  ThrustLimits.h
fbw-a32nx/src/wasm/fadec_a32nx/: CMakeLists.txt  README.md
fbw-a32nx/src/wasm/fadec_a32nx/src/: Gauge_Fadec.cpp  Gauge_Fadec_v2.cpp
fbw-a32nx/src/wasm/fbw_a320/: CMakeLists.txt  build.sh
fbw-a32nx/src/wasm/fbw_a320/src/: Arinc429.cpp  Arinc429Utils.cpp  EngineData.h  FlightDataRecorder.cpp  FlightDataRecorder.h  FlyByWireInterface.cpp  FlyByWireInterface.h
fbw-a32nx/src/wasm/flypad-backend/: CMakeLists.txt  build.sh
fbw-a32nx/src/wasm/flypad-backend/src/: FlyPadBackend.cpp  FlyPadBackend.h
fbw-a32nx/src/wasm/radalt_a320/: CMakeLists.txt  build.sh
fbw-a32nx/src/wasm/radalt_a320/src/: SimVars.h  radaltControl.h  radaltGauge.cpp  (+1 more)
fbw-a32nx/src/wasm/systems/: guidelines.md
fbw-a380x/src/wasm/: CMakeLists.txt  README.md  build.sh
fbw-a380x/src/wasm/extra-backend/: CMakeLists.txt
fbw-a380x/src/wasm/extra-backend-a380x/: CMakeLists.txt
fbw-a380x/src/wasm/fadec_a380/: CMakeLists.txt  build.sh
fbw-a380x/src/wasm/fadec_a380x/: CMakeLists.txt  README.md
fbw-a380x/src/wasm/fbw_a380/: .clang-format  CMakeLists.txt  build.sh
fbw-a380x/src/wasm/flypad-backend/: CMakeLists.txt  build.sh
fbw-a380x/src/wasm/keyboard_mapper/: build.sh
fbw-arinc429-lvar-bridge/src/wasm/arinc429-lvar-bridge/: CMakeLists.txt
fbw-common/src/wasm/cpp-msfs-framework/: CMakeLists.txt  GUIDELINES.md  README.md
fbw-common/src/wasm/extra-backend/: CMakeLists.txt  GUIDELINES.md  README.md
fbw-lvar-provider/src/wasm/lvar-provider/: CMakeLists.txt
src/extra-backend/: CMakeLists.txt  README.md  build-cmake.sh  build.sh
src/extra-backend/src/: Gauge_Extra_Backend.cpp  aircraft_prefix.h
src/extra-backend/src/MsfsHandler/: Module.h  MsfsHandler.cpp
src/extra-backend/src/lib/: Units.h  logging.h  math_utils.h
src/fdr2csv/: CMakeLists.txt  build.cmd  build.sh
src/fdr2csv/src/: FlightDataRecorderConverter.cpp  FlightDataRecorderConverter.h  main.cpp
src/fdr2csv/src/commandline/: CommandLine.hpp
src/systems/: Cargo.toml  README.md  guidelines.md
src/systems/.cargo/: config.toml
src/systems/a320/: Cargo.toml
src/systems/a320/src/: lib.rs
src/systems/a320_hydraulic_simulation_graphs/: Cargo.toml
src/systems/a320_hydraulic_simulation_graphs/src/: main.rs
src/systems/a320_systems/: Cargo.toml
src/systems/a320_systems/src/: air_conditioning.rs  flaps_computer.rs  fuel.rs  hydraulic.rs  lib.rs  pneumatic.rs  power_consumption.rs
src/systems/a320_systems_wasm/: Cargo.toml
src/systems/a320_systems_wasm/src/: ailerons.rs  autobrakes.rs  brakes.rs  communications.rs  elevators.rs  flaps.rs  gear.rs  lib.rs  nose_wheel_steering.rs  rudder.rs  spoilers.rs  ths.rs  trimmable_horizontal_stabilizer.rs
src/systems/a380_systems/: Cargo.toml
src/systems/a380_systems/src/: air_conditioning.rs  fuel.rs  lib.rs  navigation.rs  pneumatic.rs  power_consumption.rs
src/systems/a380_systems_wasm/: Cargo.toml
src/systems/a380_systems_wasm/src/: ailerons.rs  autobrakes.rs  brakes.rs  elevators.rs  lib.rs  rudder.rs  spoilers.rs
src/systems/autothrottle/.cargo/: config.toml
src/systems/autothrottle/src/: athr.rs  lib.rs  rl.rs
src/systems/fbw/: Cargo.toml  build.rs
src/systems/fbw/.cargo/: config.toml
src/systems/fbw/model/: AutopilotLaws.cpp  AutopilotLaws.h  AutopilotLaws_data.cpp  AutopilotLaws_types.h  AutopilotStateMachine.cpp  AutopilotStateMachine.h  AutopilotStateMachine_data.cpp  AutopilotStateMachine_types.h  Double2MultiWord.cpp  MultiWordIor.h  div_s32.h  rt_modd.cpp  rtwtypes.h  uMultiWord2Double.cpp  uMultiWord2Double.h
src/systems/fbw/src/: config.rs  interface.rs  lib.rs  model.rs  rl.rs  sim_connect.rs  simvars.rs  wrapper.hpp
src/systems/src/: lib.rs
src/systems/systems/: Cargo.toml
src/systems/systems/src/: lib.rs
src/systems/systems_derive/: Cargo.toml
src/systems/systems_derive/src/: lib.rs
src/systems/systems_wasm/: Cargo.toml
src/systems/systems_wasm/src/: aspects.rs  electrical.rs  failures.rs  lib.rs  msfs.rs
tools/fdr2csv/: CMakeLists.txt  Cargo.toml  a320_wrapper.hpp  a380_wrapper.hpp  build.rs  build.sh  wrapper.hpp
tools/fdr2csv/a32nx/: Cargo.toml  build.rs  wrapper.hpp
tools/fdr2csv/a32nx/src/: main.rs
tools/fdr2csv/a380x/: Cargo.toml  wrapper.hpp
tools/fdr2csv/a380x/src/: main.rs
tools/fdr2csv/common/: Cargo.toml
tools/fdr2csv/common/src/: error.rs  lib.rs
tools/fdr2csv/src/: FlightDataRecorderConverter.cpp  FlightDataRecorderConverter.h  a320.rs  a320_headers.rs  a380.rs  a380_headers.rs  csv_header_serializer.rs  error.rs  headers.rs  main.cpp  main.rs
tools/fdr2csv/src/commandline/: CommandLine.cpp
(+10801 files in other folders)
