[workspace]
resolver = "2"

members = [
    "fbw-a32nx/src/wasm/systems/a320_systems",
    "fbw-a32nx/src/wasm/systems/a320_systems_wasm",
    "fbw-a380x/src/wasm/systems/a380_systems",
    "fbw-a380x/src/wasm/systems/a380_systems_wasm",
    "fbw-a32nx/src/wasm/systems/a320_hydraulic_simulation_graphs",
    "fbw-common/src/wasm/systems/systems",
    "fbw-common/src/wasm/systems/systems_wasm",
]

[workspace.dependencies]
more-asserts = "0.3.1"
ntest = "0.9.3"
uom = "0.37.0"
rand = "0.9.2"
rstest = "0.26.1"

[profile.release]
lto = true
strip = true

[profile.test]
# We enable some basic optimization to prevent stack overflows during testing (flybywiresim/a32nx#7631)
# However, if this interferes with your ability to debug locally you can disable it here
opt-level=1
lto = true
debug-assertions=true
debug=true
