[package]
name = "fdr2csv"
version = "0.2.0"
authors = ["FlyByWire Simulations"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.72"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.25", features = ["derive"] }

csv = "1.4"
flate2 = "1.1"

[workspace]
