[package]
name = "systems"
version = "0.1.0"
authors = ["FlyByWire Simulations"]
edition = "2018"

[dependencies]
uom = "0.30.0"
rand = { version = "0.8.0", features = ["small_rng"] }
ntest = "0.7.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
nalgebra = "0.25.0"
bounded-vec-deque = "0.1.1"
fxhash = "0.2.1"

[dev-dependencies]
rstest = "0.10.0"
